--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -95,22 +95,78 @@
 .card:active {
   color: #0070f3;
   border-color: #0070f3;
+  cursor: pointer;
+  vertical-align: middle;
 }
 
 .card h2 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
+  vertical-align: middle;
 }
 
 .card p {
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
+  vertical-align: middle;
 }
 
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.button_container {
+  margin-bottom: 0.5rem;
+}
+
+.fade-enter .btn {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+.fade-enter-active .btn {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.fade-exit .btn {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.fade-exit-active .btn {
+  opacity: 0;
+  transform: translateX(100%);
+}
+.fade-enter-active .btn,
+.fade-exit-active .btn {
+  transition: opacity 500ms, transform 500ms;
+}
+
+.slottt_machine_recipe {
+  margin: 0px auto;
+  width: 700px;
+  margin-top: 50px;
+}
+
+.slottt_machine_recipe__mask {
+    width: 100%;
+    height: 150px;
+    overflow: hidden; 
+    position: relative;
+    display: inline-block;
+    margin-bottom: -40px;
+}
+
+.slottt_machine_recipe__items_container {
+    position: absolute;
+}
+
+.slottt_machine_recipe__item {
+    min-height: 150px;
+    max-height: 150px;
+    margin: 0px;
+    padding: 0px;
+    background-size: contain;
 }
 
 @media (max-width: 600px) {
