--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -149,24 +149,24 @@
 }
 
 .slottt_machine_recipe__mask {
-    width: 100%;
-    height: 150px;
-    overflow: hidden; 
-    position: relative;
-    display: inline-block;
-    margin-bottom: -40px;
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  margin-bottom: -40px;
 }
 
 .slottt_machine_recipe__items_container {
-    position: absolute;
+  position: absolute;
 }
 
 .slottt_machine_recipe__item {
-    min-height: 150px;
-    max-height: 150px;
-    margin: 0px;
-    padding: 0px;
-    background-size: contain;
+  min-height: 150px;
+  max-height: 150px;
+  margin: 0px;
+  padding: 0px;
+  background-size: contain;
 }
 
 @media (max-width: 600px) {
@@ -174,4 +174,11 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.stringdiv {
+  width: 100%;
+  backface-visibility: hidden;
+  position: absolute;
+  left: 0;
 }
