--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,11 @@
   height: 100vh;
 }
 
+.clicklottie {
+  transform: translateX(50%);
+  transform: translateY(-50%);
+}
+
 .bgWrap {
   position: fixed;
   height: 100vh;
@@ -15,7 +20,7 @@
   overflow: hidden;
   z-index: -1;
   /* filter: contrast(80%); */
-  opacity: 0.4;
+  opacity: 0.55;
 }
 
 .main {
@@ -96,14 +101,14 @@
 }
 
 .card1 {
-  background-color: white;
+  background-color: #F7F7F7;
   color: #363967;
   /* margin: 1rem; */
   margin: 0px auto;
   padding: 0 1.5rem;
   text-align: center;
   text-decoration: none;
-  border: 2px solid white;
+  border: 3px solid #F7F7F7;
   border-radius: 30px;
   transition: color 0.15s ease, border-color 0.15s ease;
   /* width: 200%; */
@@ -113,13 +118,13 @@
 }
 
 .card2 {
-  background-color: white;
+  background-color: #F7F7F7;
   color: #363967;
   margin: 1rem;
   padding: 0 1.5rem;
   text-align: center;
   text-decoration: none;
-  border: 2px solid white;
+  border: 3px solid #F7F7F7;
   border-radius: 30px;
   transition: color 0.15s ease, border-color 0.15s ease;
   /* position: relative; */
