--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,6 +13,8 @@
   transform: translateY(-50%);
 }
 
+
+
 .bgWrap {
   position: fixed;
   height: 100vh;
@@ -21,6 +23,9 @@
   z-index: -1;
   /* filter: contrast(80%); */
   opacity: 0.55;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 .main {
