--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,12 @@ a {
   text-decoration: none;
 }
 
+/* img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
 * {
   box-sizing: border-box;
 }
