--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,6 +26,8 @@
   justify-content: center;
   align-items: center;
   display: flex;
+  max-width: 100%;
+  /* height: auto; */
 }
 
 .main {
@@ -38,19 +40,27 @@
 }
 
 .footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+  height: 80px;
+  /* border-top: 1px solid #eaeaea; */
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: #F7F7F7;
+  opacity: 0.8;
 }
 
 .footer a {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  flex-grow: 1; */
+  color: #363967;
+  font-weight: 500;
 }
 
 .title a {
@@ -203,6 +213,21 @@
   .grid {
     width: 100%;
     /* flex-direction: column; */
+  }
+  .bgWrap {
+    max-width: 100%;
+    /* position: fixed; */
+    /* height: 100vh; */
+    /* width: 100vw; */
+    /* overflow: hidden;
+    z-index: -1; */
+    /* filter: contrast(80%); */
+    /* opacity: 0.55; */
+    /* justify-content: center;
+    align-items: center;
+    display: flex; */
+    /* max-width: 100%; */
+    height: auto;
   }
 }
 
